fix: restart button color is blue on IOS browsers

--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -396,3 +396,10 @@ pre {
     opacity: 0.1;
   }
 }
+
+.restart-btn,
+.restart-btn:visited,
+.restart-btn:active {
+  color: white !important;
+  text-decoration: none;
+}
